--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,42 +1,28 @@
 node {
     stage('Build') {
-        agent {
-            docker {
-                image 'python:2-alpine'
-            }
-        }
-        steps {
-            sh 'python -m py_compile sources/add2vals.py sources/calc.py'
-        }
+        sh 'docker run python:2-alpine'
+        sh 'python -m py_compile sources/add2vals.py sources/calc.py'
     }
     stage('Test') {
-        agent {
-            docker {
-                image 'qnib/pytest'
-            }
-        }
-        steps {
+        try {
+            sh 'docker run qnib/pytest'
             sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
-        }
-        post {
-            always {
-                junit 'test-reports/results.xml'
-            }
+        } catch (e) {
+
+        } finally {
+            // post always
+            junit 'test-reports/results.xml'
         }
     }
     stage('Deliver') {
-        agent {
-            docker {
-                image 'cdrx/pyinstaller-linux:python2'
-            }
-        }
-        steps {
+        try {
+            sh 'docker run cdrx/pyinstaller-linux:python2'
             sh 'pyinstaller --onefile sources/add2vals.py'
-        }
-        post {
-            success {
-                archiveArtifacts 'dist/add2vals'
-            }
+
+            // post success
+            archiveArtifacts 'dist/add2vals'
+        } catch (e) {
+
         }
     }
 }
