--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,13 +2,13 @@
 
 node {
     stage('Build') {
-        docker.image('python:2-alpine').withRun('-w /app -v sources:/app/sources') {
+        docker.image('python:2-alpine').withRun('-w /app -v sources:/app/sources') { c ->
             sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
     }
     stage('Test') {
         try {
-            docker.image('qnib/pytest').withRun('-w /app -v sources:/app/sources test-reports:/app/test-reports') {
+            docker.image('qnib/pytest').withRun('-w /app -v sources:/app/sources test-reports:/app/test-reports') { c ->
                 sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
             }
         } catch (e) {
@@ -19,7 +19,7 @@ node {
         }
     }
     stage('Deliver') {
-        docker.image('cdrx/pyinstaller-linux:python2').withRun('-w /app -v sources:/app/sources') {
+        docker.image('cdrx/pyinstaller-linux:python2').withRun('-w /app -v sources:/app/sources') { c ->
             sh 'pyinstaller --onefile sources/add2vals.py'
         }
 
