--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,6 @@
 // must install "docker pipeline" and "junit" plugin
 
-node {
+node('docker') {
     stage('Build') {
         docker.image('python:2-alpine').withRun('-w /app -v sources:/app/sources') { c ->
             sh 'python -m py_compile sources/add2vals.py sources/calc.py'
