--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,6 +3,8 @@
 node {
     stage('Build') {
         docker.image('python:2-alpine').inside('-w /app -v sources:/app/sources') {
+            sh 'ls'
+            sh 'pwd'
             sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
     }
