--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,7 +5,8 @@ node {
         docker.image('python:2-alpine').inside('-w /app -v sources:/app/sources') {
             sh 'ls'
             sh 'pwd'
-            sh 'python -m py_compile sources/add2vals.py sources/calc.py'
+            sh 'python --version'
+            // sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
     }
     stage('Test') {
