--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@
 
 node {
     stage('Build') {
-        docker.image('python:2-alpine').inside('-w /app -v sources:/app/sources') {
+        docker.image('python:2-alpine').inside {
             sh 'ls'
             sh 'pwd'
             sh 'python --version'
@@ -11,7 +11,7 @@ node {
     }
     stage('Test') {
         try {
-            docker.image('qnib/pytest').inside('-w /app -v sources:/app/sources test-reportapp/test-reports') {c ->
+            docker.image('qnib/pytest').inside {
                 sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
             }
         } catch (e) {
@@ -22,7 +22,7 @@ node {
         }
     }
     stage('Deliver') {
-        docker.image('cdrx/pyinstaller-linux:python2').inside('-w /app -v sources:/app/sources') {
+        docker.image('cdrx/pyinstaller-linux:python2').inside {
             sh 'pyinstaller --onefile sources/add2vals.py'
         }
 
