--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,12 +1,13 @@
 // must install "docker pipeline" and "junit" plugin
 
 node {
+    checkout scm
     stage('Build') {
         docker.image('python:2-alpine').inside {
             sh 'ls'
             sh 'pwd'
             sh 'python --version'
-            // sh 'python -m py_compile sources/add2vals.py sources/calc.py'
+            sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
     }
     stage('Test') {
