--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,11 +20,15 @@ node {
         }
     }
     stage('Deliver') {
-        docker.image('cdrx/pyinstaller-linux:python2').inside {
-            sh 'pyinstaller --onefile sources/add2vals.py'
-        }
+        try {
+            docker.image('cdrx/pyinstaller-linux:python2').inside {
+                sh 'pyinstaller --onefile sources/add2vals.py'
+            }
 
-        // post success
-        archiveArtifacts 'dist/add2vals'
+            // post success
+            archiveArtifacts 'dist/add2vals'
+        } catch (e) {
+
+        }
     }
 }
