--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,6 +6,8 @@ node {
         docker.image('python:2-alpine').inside {
             sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
+        sh 'ls'
+        sh 'pwd'
     }
     stage('Test') {
         try {
