--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,13 +3,13 @@
 node {
     checkout scm
     stage('Build') {
-        docker.image('python:2-alpine').inside {
+        docker.image('python:2-alpine').withRun {
             sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
     }
     stage('Test') {
         try {
-            docker.image('qnib/pytest').inside {
+            docker.image('qnib/pytest').withRun {
                 sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
             }
         } catch (e) {
@@ -20,7 +20,7 @@ node {
         }
     }
     stage('Deliver') {
-        docker.image('cdrx/pyinstaller-linux:python2').inside {
+        docker.image('cdrx/pyinstaller-linux:python2').withRun {
             sh 'pyinstaller --onefile sources/add2vals.py'
         }
 
