--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,13 +3,13 @@
 node {
     checkout scm
     stage('Build') {
-        docker.image('python:2-alpine').withRun {
+        docker.image('python:2-alpine').inside {
             sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
     }
     stage('Test') {
         try {
-            docker.image('qnib/pytest').withRun {
+            docker.image('qnib/pytest').inside {
                 sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
             }
         } catch (e) {
@@ -20,11 +20,16 @@ node {
         }
     }
     stage('Deliver') {
-        docker.image('cdrx/pyinstaller-linux:python2').withRun {
-            sh 'pyinstaller --onefile sources/add2vals.py'
+        try {
+            docker.image('cdrx/pyinstaller-linux:python2').inside {
+                sh 'pyinstaller --onefile sources/add2vals.py'
+            }
+        } catch (e) {
+
+        } finally {
+            // post success
+            archiveArtifacts 'dist/add2vals'
         }
 
-        // post success
-        archiveArtifacts 'dist/add2vals'
     }
 }
