--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -28,7 +28,8 @@ node {
 
         } finally {
             // post success
-            archiveArtifacts 'dist/add2vals'
+            // archiveArtifacts 'dist/add2vals'
+            archiveArtifacts '${env.BUILD_ID}/sources/dist/add2vals' 
         }
 
     }
