--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -29,7 +29,7 @@ node {
         } finally {
             // post success
             // archiveArtifacts 'dist/add2vals'
-            archiveArtifacts '${env.BUILD_ID}/sources/dist/add2vals' 
+            archiveArtifacts 'sources/dist/add2vals' 
         }
 
     }
