--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,38 +1,45 @@
-// must install "docker pipeline" and "junit" plugin
-
-node {
-    checkout scm
-    stage('Build') {
-        docker.image('python:2-alpine').inside {
-            sh 'python -m py_compile sources/add2vals.py sources/calc.py'
-            stash(name: 'compiled-results', includes: 'sources/*.py*')
+pipeline {
+    agent none
+    stages {
+        stage('Build') {
+            agent {
+                docker {
+                    image 'python:2-alpine'
+                }
+            }
+            steps {
+                sh 'python -m py_compile sources/add2vals.py sources/calc.py'
+            }
         }
-    }
-    stage('Test') {
-        try {
-            docker.image('qnib/pytest').inside {
+        stage('Test') {
+            agent {
+                docker {
+                    image 'qnib/pytest'
+                }
+            }
+            steps {
                 sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
             }
-        } catch (e) {
-
-        } finally {
-            // post always
-            junit 'test-reports/results.xml'
+            post {
+                always {
+                    junit 'test-reports/results.xml'
+                }
+            }
         }
-    }
-    stage('Deliver') {
-        try {
-            docker.image('cdrx/pyinstaller-linux:python2').inside {
+        stage('Deliver') {
+            agent {
+                docker {
+                    image 'cdrx/pyinstaller-linux:python2'
+                }
+            }
+            steps {
                 sh 'pyinstaller --onefile sources/add2vals.py'
             }
-        } catch (e) {
-
-        } finally {
-            // post success
-            unstash(name: 'compiled-results')
-            archiveArtifacts 'dist/add2vals'
-            // archiveArtifacts 'sources/dist/add2vals' 
+            post {
+                success {
+                    archiveArtifacts 'dist/add2vals'
+                }
+            }
         }
-
     }
 }
