--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,45 +1,35 @@
-pipeline {
-    agent none
-    stages {
-        stage('Build') {
-            agent {
-                docker {
-                    image 'python:2-alpine'
-                }
-            }
-            steps {
-                sh 'python -m py_compile sources/add2vals.py sources/calc.py'
-            }
+// must install "docker pipeline" and "junit" plugin
+
+node {
+    checkout scm
+    stage('Build') {
+        docker.image('python:2-alpine').inside {
+            sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
-        stage('Test') {
-            agent {
-                docker {
-                    image 'qnib/pytest'
-                }
-            }
-            steps {
+    }
+    stage('Test') {
+        try {
+            docker.image('qnib/pytest').inside {
                 sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
             }
-            post {
-                always {
-                    junit 'test-reports/results.xml'
-                }
-            }
+        } catch (e) {
+
+        } finally {
+            // post always
+            junit 'test-reports/results.xml'
         }
-        stage('Deliver') {
-            agent {
-                docker {
-                    image 'cdrx/pyinstaller-linux:python2'
-                }
-            }
-            steps {
+    }
+    stage('Deliver') {
+        try {
+            docker.image('cdrx/pyinstaller-linux:python2').inside {
                 sh 'pyinstaller --onefile sources/add2vals.py'
             }
-            post {
-                success {
-                    archiveArtifacts 'dist/add2vals'
-                }
-            }
+        } catch (e) {
+
+        } finally {
+            // post success
+            archiveArtifacts 'dist/add2vals' // still failed in this step
         }
+
     }
 }
